@@ -11,22 +11,22 @@ public class RestaurantQueueTest {
     @Test
     void estimatesForThreeDishes() {
         RestaurantQueue q = new RestaurantQueue();
-        q.enqueue(Dishes.SALAD);
-        q.enqueue(Dishes.SOUP);
-        q.enqueue(Dishes.STEAK);
+        q.enqueue(Dish.SALAD);
+        q.enqueue(Dish.SOUP);
+        q.enqueue(Dish.STEAK);
 
-        List<RestaurantQueue.DishEstimate> estimates = q.estimates();
+        List<DishEstimate> estimates = q.estimates();
         assertEquals(3, estimates.size());
 
-        assertEquals(Dishes.SALAD, estimates.get(0).dish());
+        assertEquals(Dish.SALAD, estimates.getFirst().dish());
         assertEquals(0, estimates.get(0).startsInMinutes());
         assertEquals(5, estimates.get(0).readyInMinutes());
 
-        assertEquals(Dishes.SOUP, estimates.get(1).dish());
+        assertEquals(Dish.SOUP, estimates.get(1).dish());
         assertEquals(5, estimates.get(1).startsInMinutes());
         assertEquals(15, estimates.get(1).readyInMinutes());
 
-        assertEquals(Dishes.STEAK, estimates.get(2).dish());
+        assertEquals(Dish.STEAK, estimates.get(2).dish());
         assertEquals(15, estimates.get(2).startsInMinutes());
         assertEquals(35, estimates.get(2).readyInMinutes());
     }
@@ -34,22 +34,22 @@ public class RestaurantQueueTest {
     @Test
     void dequeueRemovesFirstAndShiftsEstimates() {
         RestaurantQueue q = new RestaurantQueue();
-        q.enqueue(Dishes.SALAD);
-        q.enqueue(Dishes.SOUP);
-        q.enqueue(Dishes.STEAK);
+        q.enqueue(Dish.SALAD);
+        q.enqueue(Dish.SOUP);
+        q.enqueue(Dish.STEAK);
 
-        Dishes served = q.dequeue();
+        Dish served = q.dequeue();
         assertNotNull(served);
-        assertEquals(Dishes.SALAD, served);
+        assertEquals(Dish.SALAD, served);
 
-        List<RestaurantQueue.DishEstimate> after = q.estimates();
+        List<DishEstimate> after = q.estimates();
         assertEquals(2, after.size());
 
-        assertEquals(Dishes.SOUP, after.get(0).dish());
+        assertEquals(Dish.SOUP, after.getFirst().dish());
         assertEquals(0, after.get(0).startsInMinutes());
         assertEquals(10, after.get(0).readyInMinutes());
 
-        assertEquals(Dishes.STEAK, after.get(1).dish());
+        assertEquals(Dish.STEAK, after.get(1).dish());
         assertEquals(10, after.get(1).startsInMinutes());
         assertEquals(30, after.get(1).readyInMinutes());
     }
@@ -57,40 +57,34 @@ public class RestaurantQueueTest {
     @Test
     void emptyQueueEstimatesAndDequeue() {
         RestaurantQueue q = new RestaurantQueue();
-        List<RestaurantQueue.DishEstimate> est = q.estimates();
+        List<DishEstimate> est = q.estimates();
         assertNotNull(est);
         assertTrue(est.isEmpty());
         assertNull(q.dequeue());
     }
 
     @Test
-    void enqueueNullThrows() {
-        RestaurantQueue q = new RestaurantQueue();
-        assertThrows(NullPointerException.class, () -> q.enqueue(null));
-    }
-
-    @Test
     void queueOrderAndSize() {
         RestaurantQueue q = new RestaurantQueue();
-        q.enqueue(Dishes.SALAD);
-        q.enqueue(Dishes.FRIES);
-        q.enqueue(Dishes.SOUP);
+        q.enqueue(Dish.SALAD);
+        q.enqueue(Dish.FRIES);
+        q.enqueue(Dish.SOUP);
 
         assertEquals(3, q.size());
-        assertEquals(Dishes.SALAD, q.dequeue());
+        assertEquals(Dish.SALAD, q.dequeue());
         assertEquals(2, q.size());
-        assertEquals(Dishes.FRIES, q.dequeue());
-        assertEquals(Dishes.SOUP, q.dequeue());
+        assertEquals(Dish.FRIES, q.dequeue());
+        assertEquals(Dish.SOUP, q.dequeue());
         assertEquals(0, q.size());
     }
 
     @Test
     void dishEstimateValidation() {
         // negative start
-        assertThrows(IllegalArgumentException.class, () -> new RestaurantQueue.DishEstimate(Dishes.SALAD, -1, 0));
+        assertThrows(IllegalArgumentException.class, () -> new DishEstimate(Dish.SALAD, -1, 0));
         // ready before start
-        assertThrows(IllegalArgumentException.class, () -> new RestaurantQueue.DishEstimate(Dishes.SALAD, 5, 4));
+        assertThrows(IllegalArgumentException.class, () -> new DishEstimate(Dish.SALAD, 5, 4));
         // null dish
-        assertThrows(NullPointerException.class, () -> new RestaurantQueue.DishEstimate(null, 0, 0));
+        assertThrows(NullPointerException.class, () -> new DishEstimate(null, 0, 0));
     }
 }
